fix img, aggiunta overflow da fixare

--- a/css/master.css
+++ b/css/master.css
@@ -19,6 +19,7 @@ a {
 /* regole selettive */
 .conteiner {
   height: calc(100vh - 120px);
+  overflow-y: hidden;
 }
 
 /* nav upgrade */
